1112 王晓植: 微调

--- a/rufangrongke/rufangrongke/Classes/main/Controller/WXZFindPasswordController.xib
+++ b/rufangrongke/rufangrongke/Classes/main/Controller/WXZFindPasswordController.xib
@@ -38,8 +38,11 @@
                                 <constraint firstAttribute="height" constant="1" id="doZ-An-YnR"/>
                             </constraints>
                         </view>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e91-cy-sXd" userLabel="手机号码">
-                            <rect key="frame" x="98" y="0.0" width="487" height="39"/>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入11位手机号" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e91-cy-sXd" userLabel="手机号码">
+                            <rect key="frame" x="98" y="2.5" width="487" height="39"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="39" id="KdB-Nr-mFS"/>
+                            </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
@@ -49,6 +52,7 @@
                         <constraint firstItem="Usu-Bl-zdT" firstAttribute="top" secondItem="Hv4-mD-grc" secondAttribute="top" constant="30" id="43a-4U-fRu"/>
                         <constraint firstItem="e91-cy-sXd" firstAttribute="leading" secondItem="q2c-qI-JfY" secondAttribute="trailing" constant="15" id="9cP-Lx-aP2"/>
                         <constraint firstItem="Usu-Bl-zdT" firstAttribute="top" secondItem="e91-cy-sXd" secondAttribute="bottom" id="DCi-LE-M16"/>
+                        <constraint firstItem="e91-cy-sXd" firstAttribute="centerY" secondItem="q2c-qI-JfY" secondAttribute="centerY" id="IlF-kX-mSY"/>
                         <constraint firstItem="e91-cy-sXd" firstAttribute="top" secondItem="Hv4-mD-grc" secondAttribute="top" id="YQ7-uK-J2I"/>
                         <constraint firstAttribute="height" constant="45" id="bXh-Az-97c"/>
                         <constraint firstAttribute="centerY" secondItem="q2c-qI-JfY" secondAttribute="centerY" id="fj6-WB-WBT"/>
@@ -61,6 +65,8 @@
                     <variation key="default">
                         <mask key="constraints">
                             <exclude reference="43a-4U-fRu"/>
+                            <exclude reference="DCi-LE-M16"/>
+                            <exclude reference="YQ7-uK-J2I"/>
                             <exclude reference="jiA-yF-9wA"/>
                         </mask>
                     </variation>
@@ -84,9 +90,12 @@
                                 <constraint firstAttribute="height" constant="1" id="GhV-QN-u84"/>
                             </constraints>
                         </view>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9OA-r7-ajU" userLabel="验证码">
-                            <rect key="frame" x="98" y="0.0" width="487" height="39"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入验证码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9OA-r7-ajU" userLabel="验证码">
+                            <rect key="frame" x="98" y="2" width="487" height="39"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="39" id="aX6-Oj-mvP"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                     </subviews>
@@ -97,6 +106,7 @@
                         <constraint firstAttribute="trailing" secondItem="Mo3-z1-vUp" secondAttribute="trailing" constant="15" id="Ltd-8z-yLg"/>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="RL6-1W-tyt"/>
                         <constraint firstItem="Mo3-z1-vUp" firstAttribute="top" secondItem="DgB-ib-5cK" secondAttribute="top" constant="35" id="V3c-l6-1Pm"/>
+                        <constraint firstItem="9OA-r7-ajU" firstAttribute="centerY" secondItem="fEF-Eq-lIZ" secondAttribute="centerY" id="VPc-IW-buK"/>
                         <constraint firstItem="Mo3-z1-vUp" firstAttribute="top" secondItem="9OA-r7-ajU" secondAttribute="bottom" id="ZMQ-rh-CvS"/>
                         <constraint firstAttribute="centerY" secondItem="9OA-r7-ajU" secondAttribute="centerY" id="dLW-7X-30J"/>
                         <constraint firstAttribute="centerY" secondItem="fEF-Eq-lIZ" secondAttribute="centerY" id="dz3-8G-2Ek"/>
@@ -109,7 +119,9 @@
                         <mask key="constraints">
                             <exclude reference="RL6-1W-tyt"/>
                             <exclude reference="V3c-l6-1Pm"/>
+                            <exclude reference="ZMQ-rh-CvS"/>
                             <exclude reference="dLW-7X-30J"/>
+                            <exclude reference="rnn-2s-N12"/>
                         </mask>
                     </variation>
                 </view>
@@ -132,25 +144,43 @@
                                 <constraint firstAttribute="height" constant="1" id="Nrk-Mr-Y8O"/>
                             </constraints>
                         </view>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fci-Fr-N45" userLabel="重置密码">
-                            <rect key="frame" x="98" y="0.0" width="487" height="39"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fci-Fr-N45" userLabel="重置密码">
+                            <rect key="frame" x="98" y="2" width="463" height="39"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="39" id="dCa-22-2P0"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eU2-pd-wYJ" userLabel="眼睛">
+                            <rect key="frame" x="555" y="7" width="30" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="mJz-aH-q8u"/>
+                                <constraint firstAttribute="width" constant="30" id="vDi-Gx-Zmi"/>
+                            </constraints>
+                            <state key="normal" image="zc_yanjing"/>
+                            <state key="selected" image="zc_yanjingx"/>
+                            <connections>
+                                <action selector="showHidenPwd:" destination="-1" eventType="touchUpInside" id="RCC-I1-4Ky"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="1qM-FB-Jxi"/>
-                        <constraint firstAttribute="trailing" secondItem="fci-Fr-N45" secondAttribute="trailing" constant="15" id="7GP-8z-Uwo"/>
+                        <constraint firstAttribute="trailing" secondItem="fci-Fr-N45" secondAttribute="trailing" constant="39" id="7GP-8z-Uwo"/>
+                        <constraint firstItem="eU2-pd-wYJ" firstAttribute="centerY" secondItem="piu-gV-EzG" secondAttribute="centerY" id="9gX-aJ-8c8"/>
                         <constraint firstAttribute="centerY" secondItem="fci-Fr-N45" secondAttribute="centerY" id="BsT-Xc-RaI"/>
                         <constraint firstAttribute="centerY" secondItem="ilD-no-neh" secondAttribute="centerY" id="C7N-yP-d4b"/>
                         <constraint firstAttribute="height" constant="45" id="H3N-PK-Oa1"/>
                         <constraint firstAttribute="trailing" secondItem="O7s-6s-g1F" secondAttribute="trailing" constant="15" id="K3C-Xg-6Ti"/>
                         <constraint firstItem="fci-Fr-N45" firstAttribute="leading" secondItem="ilD-no-neh" secondAttribute="trailing" constant="15" id="P2N-Pw-odh"/>
+                        <constraint firstItem="fci-Fr-N45" firstAttribute="centerY" secondItem="ilD-no-neh" secondAttribute="centerY" id="W7U-KD-aQG"/>
                         <constraint firstItem="ilD-no-neh" firstAttribute="leading" secondItem="piu-gV-EzG" secondAttribute="leading" constant="15" id="b7q-4a-xP4"/>
                         <constraint firstItem="O7s-6s-g1F" firstAttribute="top" secondItem="piu-gV-EzG" secondAttribute="top" constant="35" id="fP2-IJ-ieM"/>
                         <constraint firstItem="O7s-6s-g1F" firstAttribute="top" secondItem="fci-Fr-N45" secondAttribute="bottom" id="g1s-Gp-uaI"/>
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="60" id="h25-uh-FHS"/>
                         <constraint firstItem="O7s-6s-g1F" firstAttribute="leading" secondItem="ilD-no-neh" secondAttribute="trailing" id="iUr-Uu-YlP"/>
+                        <constraint firstAttribute="trailing" secondItem="eU2-pd-wYJ" secondAttribute="trailing" constant="15" id="lof-XK-Dhd"/>
                         <constraint firstItem="ilD-no-neh" firstAttribute="bottom" secondItem="O7s-6s-g1F" secondAttribute="top" constant="-8" id="voh-Al-S08"/>
                         <constraint firstItem="fci-Fr-N45" firstAttribute="top" secondItem="piu-gV-EzG" secondAttribute="top" id="yhv-pa-JZN"/>
                     </constraints>
@@ -159,20 +189,22 @@
                             <exclude reference="1qM-FB-Jxi"/>
                             <exclude reference="h25-uh-FHS"/>
                             <exclude reference="fP2-IJ-ieM"/>
+                            <exclude reference="g1s-Gp-uaI"/>
                             <exclude reference="BsT-Xc-RaI"/>
+                            <exclude reference="yhv-pa-JZN"/>
                         </mask>
                     </variation>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hJY-Ex-sYU" customClass="JxbScaleButton">
                     <rect key="frame" x="515" y="92" width="70" height="30"/>
-                    <color key="backgroundColor" red="0.87843137250000003" green="0.87843137250000003" blue="0.87843137250000003" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="70" id="JiP-TB-Rdp"/>
                         <constraint firstAttribute="height" constant="30" id="auk-C9-POm"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                    <state key="normal" title="获取验证码">
-                        <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <state key="normal" title="获取验证码" backgroundImage="wo_codebg">
+                        <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
@@ -221,5 +253,8 @@
     </objects>
     <resources>
         <image name="denglu" width="11" height="29"/>
+        <image name="wo_codebg" width="11" height="25"/>
+        <image name="zc_yanjing" width="21" height="11"/>
+        <image name="zc_yanjingx" width="21" height="11"/>
     </resources>
 </document>
