--- a/rufangrongke/rufangrongke/Classes/main/Controller/WXZLoginController.xib
+++ b/rufangrongke/rufangrongke/Classes/main/Controller/WXZLoginController.xib
@@ -7,7 +7,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WXZLoginController">
             <connections>
+                <outlet property="autoLoginBtn" destination="sjn-Rd-PgQ" id="cMg-mR-K4E"/>
                 <outlet property="pwdField" destination="1xb-UU-DCY" id="2xs-GG-w6p"/>
+                <outlet property="remenberPasswordBtn" destination="Yo5-Ts-FYu" id="Chu-hZ-f2v"/>
                 <outlet property="showHideCode_Button" destination="FhZ-nY-OYw" id="Hcq-qK-jLh"/>
                 <outlet property="usernameField" destination="YNQ-Hl-rLD" id="XpR-N2-tSU"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -60,7 +62,7 @@
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="账号:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6U1-v0-f9g">
                             <rect key="frame" x="46" y="9" width="39" height="20.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="yonghu" translatesAutoresizingMaskIntoConstraints="NO" id="egd-XG-wcJ">
@@ -74,6 +76,9 @@
                             <rect key="frame" x="98" y="0.0" width="429" height="40"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="-1" id="Mfy-Mj-tL4"/>
+                            </connections>
                         </textField>
                     </subviews>
                     <constraints>
@@ -107,7 +112,7 @@
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="密码:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HEm-pC-yr8">
                             <rect key="frame" x="46" y="10" width="39" height="20.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mima" translatesAutoresizingMaskIntoConstraints="NO" id="2Qj-sU-NAv">
@@ -121,15 +126,18 @@
                             <rect key="frame" x="98" y="0.0" width="421" height="40"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            <connections>
+                                <outlet property="delegate" destination="-1" id="TdX-8Q-eIa"/>
+                            </connections>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FhZ-nY-OYw" userLabel="眼睛">
-                            <rect key="frame" x="518" y="14" width="21" height="11"/>
+                            <rect key="frame" x="507" y="5" width="30" height="30"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="21" id="AlN-zm-IWe"/>
-                                <constraint firstAttribute="height" constant="11" id="gQ4-L1-66h"/>
+                                <constraint firstAttribute="width" constant="30" id="AlN-zm-IWe"/>
+                                <constraint firstAttribute="height" constant="30" id="gQ4-L1-66h"/>
                             </constraints>
-                            <state key="normal" backgroundImage="zc_yanjing"/>
-                            <state key="selected" backgroundImage="zc_yanjingx"/>
+                            <state key="normal" image="zc_yanjing"/>
+                            <state key="selected" image="zc_yanjingx"/>
                             <connections>
                                 <action selector="showHideCode:" destination="-1" eventType="touchUpInside" id="TeP-pt-yk4"/>
                             </connections>
@@ -150,7 +158,7 @@
                         <constraint firstItem="2Qj-sU-NAv" firstAttribute="leading" secondItem="TD8-qq-8p8" secondAttribute="leading" constant="13" id="e3b-Mr-J8P"/>
                         <constraint firstAttribute="bottom" secondItem="1xb-UU-DCY" secondAttribute="bottom" id="fAq-v2-B21"/>
                         <constraint firstItem="1xb-UU-DCY" firstAttribute="centerY" secondItem="FhZ-nY-OYw" secondAttribute="centerY" id="hcB-dT-X0z"/>
-                        <constraint firstAttribute="trailing" secondItem="FhZ-nY-OYw" secondAttribute="trailing" constant="1" id="wZW-j7-7up"/>
+                        <constraint firstAttribute="trailing" secondItem="FhZ-nY-OYw" secondAttribute="trailing" constant="3" id="wZW-j7-7up"/>
                         <constraint firstItem="ydU-Tf-ABg" firstAttribute="leading" secondItem="TD8-qq-8p8" secondAttribute="leading" id="ylu-Fj-fOP"/>
                     </constraints>
                     <variation key="default">
@@ -165,7 +173,7 @@
                         <constraint firstAttribute="height" constant="43" id="AO4-Yg-sO2"/>
                     </constraints>
                     <state key="normal" title="登陆" backgroundImage="denglu">
-                        <color key="titleColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
+                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <connections>
                         <action selector="login:" destination="-1" eventType="touchUpInside" id="S9v-Od-3lS"/>
@@ -188,42 +196,82 @@
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5eZ-q8-iqJ" userLabel="记住密码">
-                    <rect key="frame" x="30" y="346" width="130" height="31"/>
+                    <rect key="frame" x="30" y="346" width="88" height="30"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="记住密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t9k-IJ-KOK">
-                            <rect key="frame" x="0.0" y="2" width="70" height="27"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="记住密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t9k-IJ-KOK">
+                            <rect key="frame" x="28" y="6" width="60" height="18"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gro-ln-cDY">
-                            <rect key="frame" x="73" y="0.0" width="51" height="31"/>
-                        </switch>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yo5-Ts-FYu">
+                            <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="30" id="AYK-8s-RcF"/>
+                                <constraint firstAttribute="height" constant="30" id="bU4-bx-2W2"/>
+                            </constraints>
+                            <state key="normal" image="loading-chooseside"/>
+                            <state key="selected" image="loading-duigou"/>
+                            <connections>
+                                <action selector="remenberPassword:" destination="-1" eventType="touchUpInside" id="7iX-Qf-PfK"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="130" id="8mF-ze-eST"/>
-                        <constraint firstAttribute="height" constant="31" id="COO-W7-Yne"/>
+                        <constraint firstAttribute="width" constant="88" id="8mF-ze-eST"/>
+                        <constraint firstAttribute="height" constant="30" id="COO-W7-Yne"/>
+                        <constraint firstItem="Yo5-Ts-FYu" firstAttribute="leading" secondItem="5eZ-q8-iqJ" secondAttribute="leading" id="JcO-zu-hTq"/>
+                        <constraint firstItem="t9k-IJ-KOK" firstAttribute="centerY" secondItem="5eZ-q8-iqJ" secondAttribute="centerY" id="fHx-PL-v0f"/>
+                        <constraint firstItem="Yo5-Ts-FYu" firstAttribute="centerY" secondItem="5eZ-q8-iqJ" secondAttribute="centerY" id="iEH-Xj-ISk"/>
+                        <constraint firstItem="Yo5-Ts-FYu" firstAttribute="leading" secondItem="t9k-IJ-KOK" secondAttribute="trailing" id="nZT-tI-AOT"/>
+                        <constraint firstAttribute="trailing" secondItem="t9k-IJ-KOK" secondAttribute="trailing" id="q7u-HP-Aul"/>
                     </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="nZT-tI-AOT"/>
+                        </mask>
+                    </variation>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qfr-ry-XHC" userLabel="记住密码">
-                    <rect key="frame" x="440" y="346" width="130" height="31"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qfr-ry-XHC" userLabel="自动登录">
+                    <rect key="frame" x="482" y="346" width="88" height="30"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="记住密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OHR-JJ-OE1">
-                            <rect key="frame" x="0.0" y="2" width="70" height="27"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sjn-Rd-PgQ">
+                            <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="PNK-pP-icD"/>
+                                <constraint firstAttribute="width" constant="30" id="tvB-aK-MMc"/>
+                            </constraints>
+                            <state key="normal" image="loading-chooseside"/>
+                            <state key="selected" image="loading-duigou"/>
+                            <connections>
+                                <action selector="autoLogin:" destination="-1" eventType="touchUpInside" id="1Hb-1A-toc"/>
+                            </connections>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="自动登录" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OHR-JJ-OE1">
+                            <rect key="frame" x="28" y="6" width="60" height="18"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mca-AX-N5U">
-                            <rect key="frame" x="73" y="0.0" width="51" height="31"/>
-                        </switch>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="130" id="80S-cK-vjw"/>
-                        <constraint firstAttribute="height" constant="31" id="g1j-B2-HJf"/>
+                        <constraint firstItem="sjn-Rd-PgQ" firstAttribute="leading" secondItem="OHR-JJ-OE1" secondAttribute="trailing" id="5SE-hA-tSw"/>
+                        <constraint firstAttribute="width" constant="88" id="80S-cK-vjw"/>
+                        <constraint firstItem="OHR-JJ-OE1" firstAttribute="centerY" secondItem="Qfr-ry-XHC" secondAttribute="centerY" id="D7u-Am-aI0"/>
+                        <constraint firstItem="sjn-Rd-PgQ" firstAttribute="centerY" secondItem="Qfr-ry-XHC" secondAttribute="centerY" id="IKP-9Q-wQX"/>
+                        <constraint firstAttribute="trailing" secondItem="OHR-JJ-OE1" secondAttribute="trailing" id="NYi-0f-cOr"/>
+                        <constraint firstItem="sjn-Rd-PgQ" firstAttribute="leading" secondItem="Qfr-ry-XHC" secondAttribute="leading" id="YQL-XL-0bg"/>
+                        <constraint firstAttribute="trailing" secondItem="OHR-JJ-OE1" secondAttribute="trailing" id="aSt-dB-U2Y"/>
+                        <constraint firstAttribute="height" constant="30" id="g1j-B2-HJf"/>
                     </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="5SE-hA-tSw"/>
+                            <exclude reference="NYi-0f-cOr"/>
+                        </mask>
+                    </variation>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -255,6 +303,8 @@
         <image name="NavBg" width="36" height="12"/>
         <image name="denglu" width="11" height="29"/>
         <image name="dl_biankuang" width="321" height="41"/>
+        <image name="loading-chooseside" width="18" height="18"/>
+        <image name="loading-duigou" width="18" height="18"/>
         <image name="logo" width="84" height="84"/>
         <image name="mima" width="20" height="24"/>
         <image name="rongkebao" width="106" height="34"/>
