--- a/rufangrongke/rufangrongke/Classes/kehu/View/WXZPriceCell.xib
+++ b/rufangrongke/rufangrongke/Classes/kehu/View/WXZPriceCell.xib
@@ -33,7 +33,7 @@
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
-                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="万元" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="csA-Hg-A8F">
+                    <textField opaque="NO" clipsSubviews="YES" tag="100025" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="万元" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="csA-Hg-A8F">
                         <rect key="frame" x="86" y="45" width="70" height="19"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -49,7 +49,7 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="万元" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eaS-YU-DOf">
+                    <textField opaque="NO" clipsSubviews="YES" tag="100026" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="万元" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eaS-YU-DOf">
                         <rect key="frame" x="191" y="45" width="70" height="19"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
