宿光耀： 1.城市列表添加刷新，添加更新区域 2.输入框的限制 3.服务宣言字数限制

--- a/rufangrongke/rufangrongke/Classes/kehu/View/WXZKhdUserInfoCell.xib
+++ b/rufangrongke/rufangrongke/Classes/kehu/View/WXZKhdUserInfoCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -12,7 +12,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="69"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="姓名：" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nc4-CA-uMW">
@@ -27,19 +27,6 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xGF-2Z-fU4">
-                        <rect key="frame" x="333" y="33" width="30" height="30"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="30" id="tz4-PY-JIN"/>
-                            <constraint firstAttribute="height" constant="30" id="yjd-em-pS9"/>
-                        </constraints>
-                        <state key="normal">
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
-                        <connections>
-                            <action selector="callAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ryB-tC-6Ht"/>
-                        </connections>
-                    </button>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kh_boda" translatesAutoresizingMaskIntoConstraints="NO" id="mc8-t4-h4f">
                         <rect key="frame" x="338" y="38" width="19" height="19"/>
                         <constraints>
@@ -55,14 +42,27 @@
                         </constraints>
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h01-mW-YG9">
-                        <rect key="frame" x="285" y="32" width="30" height="30"/>
+                        <rect key="frame" x="281" y="28" width="40" height="40"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="30" id="JTG-NY-4uO"/>
-                            <constraint firstAttribute="height" constant="30" id="a6Q-F7-PNc"/>
+                            <constraint firstAttribute="width" constant="40" id="JTG-NY-4uO"/>
+                            <constraint firstAttribute="height" constant="40" id="a6Q-F7-PNc"/>
                         </constraints>
                         <state key="normal">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xGF-2Z-fU4">
+                        <rect key="frame" x="328" y="28" width="40" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="40" id="tz4-PY-JIN"/>
+                            <constraint firstAttribute="height" constant="40" id="yjd-em-pS9"/>
+                        </constraints>
+                        <state key="normal">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <connections>
+                            <action selector="callAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ryB-tC-6Ht"/>
+                        </connections>
                     </button>
                     <textField opaque="NO" clipsSubviews="YES" tag="100019" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入姓名" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FxU-5Y-LHO">
                         <rect key="frame" x="66" y="10" width="150" height="20"/>
