--- a/rufangrongke/rufangrongke/Classes/kehu/View/WXZPurchaseIntentionCell.xib
+++ b/rufangrongke/rufangrongke/Classes/kehu/View/WXZPurchaseIntentionCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -11,11 +11,11 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="106"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="105"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="期望区域：" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Fb-Fo-Qp9">
-                        <rect key="frame" x="11" y="17" width="75" height="18"/>
+                        <rect key="frame" x="11" y="19" width="75" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
@@ -30,7 +30,7 @@
                 <constraints>
                     <constraint firstItem="TLg-30-6IU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="5hY-AT-423"/>
                     <constraint firstItem="6Fb-Fo-Qp9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="11" id="8xI-Cc-ZlT"/>
-                    <constraint firstItem="6Fb-Fo-Qp9" firstAttribute="top" secondItem="TLg-30-6IU" secondAttribute="bottom" constant="16" id="FHd-mA-Udm"/>
+                    <constraint firstItem="6Fb-Fo-Qp9" firstAttribute="top" secondItem="TLg-30-6IU" secondAttribute="bottom" constant="18" id="FHd-mA-Udm"/>
                     <constraint firstAttribute="trailing" secondItem="TLg-30-6IU" secondAttribute="trailing" id="ZgA-71-Ls7"/>
                     <constraint firstItem="TLg-30-6IU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="mGq-yo-dTm"/>
                 </constraints>
