--- a/rufangrongke/rufangrongke/Classes/kehu/View/WXZKeHuListCell.xib
+++ b/rufangrongke/rufangrongke/Classes/kehu/View/WXZKeHuListCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -11,7 +11,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="75"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="74"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="749" text="name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dJV-1k-Nut">
@@ -32,19 +32,6 @@
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button hidden="YES" opaque="NO" tag="100023" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y2D-OG-scV">
-                        <rect key="frame" x="280" y="10" width="30" height="30"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="30" id="3Le-3V-5T5"/>
-                            <constraint firstAttribute="width" constant="30" id="vku-tM-Mhl"/>
-                        </constraints>
-                        <state key="normal" image="kh_bodaliebiaoye">
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
-                        <connections>
-                            <action selector="reportedOrCallAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="4d2-x4-TMQ"/>
-                        </connections>
-                    </button>
                     <button opaque="NO" tag="100024" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="erf-6Y-EBw">
                         <rect key="frame" x="280" y="20" width="28" height="14"/>
                         <constraints>
@@ -56,6 +43,19 @@
                         </state>
                         <connections>
                             <action selector="reportedOrCallAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="MbX-ZD-OPt"/>
+                        </connections>
+                    </button>
+                    <button hidden="YES" opaque="NO" tag="100023" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y2D-OG-scV">
+                        <rect key="frame" x="275" y="10" width="35" height="35"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="35" id="3Le-3V-5T5"/>
+                            <constraint firstAttribute="width" constant="35" id="vku-tM-Mhl"/>
+                        </constraints>
+                        <state key="normal" image="kh_bodaliebiaoye">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <connections>
+                            <action selector="reportedOrCallAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="4d2-x4-TMQ"/>
                         </connections>
                     </button>
                 </subviews>
