--- a/rufangrongke/rufangrongke/Classes/kehu/View/WXZPriceCell.xib
+++ b/rufangrongke/rufangrongke/Classes/kehu/View/WXZPriceCell.xib
@@ -1,66 +1,66 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PriceCell" rowHeight="257" id="KGk-i7-Jjw" customClass="WXZPriceCell">
-            <rect key="frame" x="0.0" y="0.0" width="374" height="257"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PriceCell" rowHeight="259" id="KGk-i7-Jjw" customClass="WXZPriceCell">
+            <rect key="frame" x="0.0" y="0.0" width="374" height="259"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="374" height="258"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="价格：" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ROW-rl-jf6">
-                        <rect key="frame" x="11" y="16" width="45" height="19"/>
+                        <rect key="frame" x="11" y="18" width="45" height="14"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.10588235294117647" green="0.10980392156862745" blue="0.10588235294117647" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AsF-2v-EsA">
-                        <rect key="frame" x="11" y="45" width="50" height="19"/>
+                        <rect key="frame" x="11" y="44" width="65" height="22"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="50" id="Fng-lL-Z1M"/>
-                            <constraint firstAttribute="height" constant="19" id="GpA-tu-ebq"/>
+                            <constraint firstAttribute="width" constant="65" id="Fng-lL-Z1M"/>
+                            <constraint firstAttribute="height" constant="22" id="GpA-tu-ebq"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <state key="normal" title="不限">
                             <color key="titleColor" red="0.10588235294117647" green="0.10980392156862745" blue="0.10588235294117647" alpha="1" colorSpace="calibratedRGB"/>
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
                     <textField opaque="NO" clipsSubviews="YES" tag="100025" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="万元" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="csA-Hg-A8F">
-                        <rect key="frame" x="86" y="45" width="70" height="19"/>
+                        <rect key="frame" x="101" y="44" width="70" height="22"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="19" id="M9R-oT-7xO"/>
+                            <constraint firstAttribute="height" constant="22" id="M9R-oT-7xO"/>
                             <constraint firstAttribute="width" constant="70" id="dLM-5s-InS"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                     </textField>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="至" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RTL-mq-bNN">
-                        <rect key="frame" x="166" y="46" width="15" height="18"/>
+                        <rect key="frame" x="181" y="46" width="15" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <textField opaque="NO" clipsSubviews="YES" tag="100026" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="万元" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eaS-YU-DOf">
-                        <rect key="frame" x="191" y="45" width="70" height="19"/>
+                        <rect key="frame" x="206" y="44" width="70" height="22"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="70" id="16H-D0-k02"/>
-                            <constraint firstAttribute="height" constant="19" id="dY5-29-3Mb"/>
+                            <constraint firstAttribute="height" constant="22" id="dY5-29-3Mb"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                     </textField>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VJx-0M-ehv">
-                        <rect key="frame" x="11" y="202" width="352" height="44"/>
+                        <rect key="frame" x="11" y="204" width="352" height="44"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="44" id="INA-iv-JFS"/>
                         </constraints>
@@ -75,13 +75,13 @@
                     <constraint firstAttribute="bottom" secondItem="VJx-0M-ehv" secondAttribute="bottom" constant="10" id="6oZ-Rb-IZ5"/>
                     <constraint firstItem="VJx-0M-ehv" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="11" id="7nK-Wx-nFf"/>
                     <constraint firstItem="AsF-2v-EsA" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="11" id="HdH-GK-72F"/>
-                    <constraint firstItem="AsF-2v-EsA" firstAttribute="top" secondItem="ROW-rl-jf6" secondAttribute="bottom" constant="10" id="M9f-DI-5g7"/>
+                    <constraint firstItem="AsF-2v-EsA" firstAttribute="top" secondItem="ROW-rl-jf6" secondAttribute="bottom" constant="12" id="M9f-DI-5g7"/>
                     <constraint firstAttribute="trailing" secondItem="VJx-0M-ehv" secondAttribute="trailing" constant="11" id="PXJ-Ro-LUg"/>
                     <constraint firstItem="eaS-YU-DOf" firstAttribute="leading" secondItem="RTL-mq-bNN" secondAttribute="trailing" constant="10" id="RJ3-nK-eET"/>
                     <constraint firstItem="AsF-2v-EsA" firstAttribute="leading" secondItem="ROW-rl-jf6" secondAttribute="leading" id="RXg-i0-xlW"/>
                     <constraint firstItem="eaS-YU-DOf" firstAttribute="centerY" secondItem="csA-Hg-A8F" secondAttribute="centerY" id="Shc-Hv-Ye1"/>
                     <constraint firstItem="ROW-rl-jf6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="11" id="TUh-oM-WGj"/>
-                    <constraint firstItem="ROW-rl-jf6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="djn-gL-DYU"/>
+                    <constraint firstItem="ROW-rl-jf6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="18" id="djn-gL-DYU"/>
                     <constraint firstItem="RTL-mq-bNN" firstAttribute="centerY" secondItem="csA-Hg-A8F" secondAttribute="centerY" id="g6B-5x-guU"/>
                     <constraint firstItem="AsF-2v-EsA" firstAttribute="centerY" secondItem="csA-Hg-A8F" secondAttribute="centerY" id="gFt-pf-0xA"/>
                     <constraint firstItem="RTL-mq-bNN" firstAttribute="leading" secondItem="csA-Hg-A8F" secondAttribute="trailing" constant="10" id="jME-s2-Oep"/>
@@ -94,7 +94,7 @@
                 <outlet property="priceeTextField" destination="eaS-YU-DOf" id="hqa-Ce-vyx"/>
                 <outlet property="pricefTextField" destination="csA-Hg-A8F" id="Vuh-jK-GKA"/>
             </connections>
-            <point key="canvasLocation" x="525" y="513.5"/>
+            <point key="canvasLocation" x="401" y="491.5"/>
         </tableViewCell>
     </objects>
     <resources>
