--- a/rufangrongke/rufangrongke/Classes/wo/Controller/Wo/WXZWoController.xib
+++ b/rufangrongke/rufangrongke/Classes/wo/Controller/Wo/WXZWoController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WXZWoController">
@@ -28,6 +28,7 @@
                 <constraint firstItem="sgO-d7-KMf" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="R1n-pr-PrS"/>
                 <constraint firstAttribute="bottom" secondItem="sgO-d7-KMf" secondAttribute="bottom" id="ZKu-ob-HMN"/>
             </constraints>
+            <nil key="simulatedStatusBarMetrics"/>
         </view>
     </objects>
 </document>
