--- a/rufangrongke/rufangrongke/Classes/wo/View/PersonalData/WXZPersonalData2Cell.xib
+++ b/rufangrongke/rufangrongke/Classes/wo/View/PersonalData/WXZPersonalData2Cell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -11,7 +11,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="55"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="342" height="54"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pSr-wG-9To">
@@ -44,6 +44,7 @@
                     <constraint firstItem="pSr-wG-9To" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="1Qv-e2-BJC"/>
                     <constraint firstAttribute="centerY" secondItem="pSr-wG-9To" secondAttribute="centerY" id="Qkh-7I-wBB"/>
                     <constraint firstAttribute="trailing" secondItem="77m-Eh-JYG" secondAttribute="trailing" id="Y6o-X5-NxC"/>
+                    <constraint firstItem="V6s-iH-33V" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="pSr-wG-9To" secondAttribute="trailing" constant="60" id="cVf-eb-okB"/>
                     <constraint firstAttribute="centerY" secondItem="77m-Eh-JYG" secondAttribute="centerY" id="mb0-k7-OpJ"/>
                     <constraint firstAttribute="trailing" secondItem="V6s-iH-33V" secondAttribute="trailing" id="s0v-il-Yk8"/>
                     <constraint firstAttribute="centerY" secondItem="vQi-ko-JFb" secondAttribute="centerY" id="vVq-8F-qkm"/>
