--- a/rufangrongke/rufangrongke/Classes/wo/View/Wo/WXZWoHeadCell.xib
+++ b/rufangrongke/rufangrongke/Classes/wo/View/Wo/WXZWoHeadCell.xib
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HeadCell" rowHeight="249" id="KGk-i7-Jjw" customClass="WXZWoHeadCell">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="249"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HeadCell" rowHeight="269" id="KGk-i7-Jjw" customClass="WXZWoHeadCell">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="269"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="268"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wo_headbg" translatesAutoresizingMaskIntoConstraints="NO" id="6Wd-DU-gxA">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="249"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="269"/>
                     </imageView>
                     <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wo_head" translatesAutoresizingMaskIntoConstraints="NO" id="cnY-e8-onQ">
-                        <rect key="frame" x="126" y="17" width="123" height="123"/>
+                        <rect key="frame" x="126" y="37" width="123" height="123"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="117" id="2f7-t5-LEk"/>
                             <constraint firstAttribute="width" constant="123" id="B6R-Gl-DMM"/>
@@ -35,39 +35,39 @@
                         </variation>
                     </imageView>
                     <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LMv-cd-87n">
-                        <rect key="frame" x="126" y="17" width="123" height="123"/>
+                        <rect key="frame" x="126" y="37" width="123" height="123"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="123" id="Ovk-Vq-TEN"/>
                             <constraint firstAttribute="width" constant="123" id="pYn-nI-7Zj"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="添加用户名" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="45" translatesAutoresizingMaskIntoConstraints="NO" id="WeH-xV-xWk">
-                        <rect key="frame" x="130" y="157" width="80" height="19"/>
+                        <rect key="frame" x="130" y="177" width="80" height="19"/>
                         <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="16"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wo_certification" translatesAutoresizingMaskIntoConstraints="NO" id="9TQ-23-gzX">
-                        <rect key="frame" x="217" y="158" width="29" height="12"/>
+                        <rect key="frame" x="217" y="178" width="29" height="12"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="12" id="SNd-9x-mB3"/>
                             <constraint firstAttribute="width" constant="29" id="bj4-hf-5NL"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="尚未绑定门店码" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ptl-Mh-GXE">
-                        <rect key="frame" x="113" y="186" width="84" height="15"/>
+                        <rect key="frame" x="113" y="206" width="84" height="15"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="一句话喊出你的精气神儿！~编辑你的服务宣言" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="agU-md-HcP">
-                        <rect key="frame" x="10" y="212" width="355" height="15"/>
+                        <rect key="frame" x="10" y="232" width="355" height="15"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yjY-Yj-nZd">
-                        <rect key="frame" x="207" y="180" width="53" height="28"/>
+                        <rect key="frame" x="207" y="200" width="53" height="28"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="28" id="VnE-gj-B49"/>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="53" id="hfy-Ov-2fQ"/>
@@ -89,9 +89,9 @@
                     <constraint firstAttribute="trailing" secondItem="6Wd-DU-gxA" secondAttribute="trailing" id="1gJ-fU-Bno"/>
                     <constraint firstItem="6Wd-DU-gxA" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="2TJ-sy-H4y"/>
                     <constraint firstItem="agU-md-HcP" firstAttribute="top" secondItem="ptl-Mh-GXE" secondAttribute="bottom" constant="11" id="5Kp-5U-x9e"/>
-                    <constraint firstItem="LMv-cd-87n" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="17" id="7hW-bd-BYn"/>
+                    <constraint firstItem="LMv-cd-87n" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="37" id="7hW-bd-BYn"/>
                     <constraint firstAttribute="centerX" secondItem="ptl-Mh-GXE" secondAttribute="centerX" constant="32" id="9fe-rt-tad"/>
-                    <constraint firstItem="cnY-e8-onQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="17" id="DCr-Ps-EFG"/>
+                    <constraint firstItem="cnY-e8-onQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="37" id="DCr-Ps-EFG"/>
                     <constraint firstItem="9TQ-23-gzX" firstAttribute="top" secondItem="LMv-cd-87n" secondAttribute="bottom" constant="18" id="Gs7-Tk-OPc"/>
                     <constraint firstAttribute="centerX" secondItem="ptl-Mh-GXE" secondAttribute="centerX" constant="33" id="KMO-gL-iHB"/>
                     <constraint firstItem="ptl-Mh-GXE" firstAttribute="centerY" secondItem="yjY-Yj-nZd" secondAttribute="centerY" id="Kqq-kv-XdE"/>
@@ -132,7 +132,7 @@
                 <outlet property="storeYardsLabel" destination="ptl-Mh-GXE" id="i7T-du-8r4"/>
                 <outlet property="userNameLabel" destination="WeH-xV-xWk" id="zbe-4m-ALX"/>
             </connections>
-            <point key="canvasLocation" x="483.5" y="423.5"/>
+            <point key="canvasLocation" x="483.5" y="413.5"/>
         </tableViewCell>
     </objects>
     <resources>
