--- a/rufangrongke/rufangrongke/Classes/main/Controller/WXZFindPasswordController.xib
+++ b/rufangrongke/rufangrongke/Classes/main/Controller/WXZFindPasswordController.xib
@@ -38,12 +38,12 @@
                                 <constraint firstAttribute="height" constant="1" id="doZ-An-YnR"/>
                             </constraints>
                         </view>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入11位手机号" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e91-cy-sXd" userLabel="手机号码">
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入11位手机号" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="e91-cy-sXd" userLabel="手机号码">
                             <rect key="frame" x="98" y="2.5" width="487" height="39"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="39" id="KdB-Nr-mFS"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                     </subviews>
@@ -90,12 +90,12 @@
                                 <constraint firstAttribute="height" constant="1" id="GhV-QN-u84"/>
                             </constraints>
                         </view>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入验证码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9OA-r7-ajU" userLabel="验证码">
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入验证码" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="9OA-r7-ajU" userLabel="验证码">
                             <rect key="frame" x="98" y="2" width="487" height="39"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="39" id="aX6-Oj-mvP"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                     </subviews>
@@ -144,13 +144,13 @@
                                 <constraint firstAttribute="height" constant="1" id="Nrk-Mr-Y8O"/>
                             </constraints>
                         </view>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fci-Fr-N45" userLabel="重置密码">
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入密码" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="fci-Fr-N45" userLabel="重置密码">
                             <rect key="frame" x="98" y="2" width="463" height="39"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="39" id="dCa-22-2P0"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eU2-pd-wYJ" userLabel="眼睛">
                             <rect key="frame" x="555" y="7" width="30" height="30"/>
