--- a/rufangrongke/rufangrongke/Classes/main/Controller/WXZRegisterController.xib
+++ b/rufangrongke/rufangrongke/Classes/main/Controller/WXZRegisterController.xib
@@ -40,9 +40,9 @@
                                 <constraint firstAttribute="height" constant="1" id="Fxy-nc-S0O"/>
                             </constraints>
                         </view>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入您的真实姓名" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="72V-Be-ree" userLabel="真实姓名">
-                            <rect key="frame" x="88" y="21" width="462" height="17"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入您的真实姓名" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="72V-Be-ree" userLabel="真实姓名">
+                            <rect key="frame" x="88" y="14" width="462" height="31"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                     </subviews>
@@ -51,6 +51,7 @@
                         <constraint firstAttribute="centerY" secondItem="72V-Be-ree" secondAttribute="centerY" id="6vM-7D-ba2"/>
                         <constraint firstItem="459-BL-Rq6" firstAttribute="leading" secondItem="A1v-4z-6rR" secondAttribute="leading" id="7M8-PY-1WR"/>
                         <constraint firstAttribute="trailing" secondItem="rcu-bx-jCa" secondAttribute="trailing" id="7uH-OT-vLY"/>
+                        <constraint firstItem="rcu-bx-jCa" firstAttribute="top" secondItem="72V-Be-ree" secondAttribute="bottom" id="C2d-1C-YD5"/>
                         <constraint firstItem="72V-Be-ree" firstAttribute="centerY" secondItem="459-BL-Rq6" secondAttribute="centerY" id="K5v-2K-f1O"/>
                         <constraint firstItem="rcu-bx-jCa" firstAttribute="leading" secondItem="459-BL-Rq6" secondAttribute="trailing" constant="20" id="Kfi-t7-Ucx"/>
                         <constraint firstAttribute="centerY" secondItem="459-BL-Rq6" secondAttribute="centerY" id="OQK-TP-9Za"/>
@@ -87,9 +88,9 @@
                                 <constraint firstAttribute="height" constant="1" id="VDR-QJ-v4u"/>
                             </constraints>
                         </view>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入11位手机号" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tsV-NX-iHM" userLabel="手机号码">
-                            <rect key="frame" x="88" y="21" width="462" height="17"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入11位手机号" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="tsV-NX-iHM" userLabel="手机号码">
+                            <rect key="frame" x="88" y="14" width="462" height="31"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                     </subviews>
@@ -99,6 +100,7 @@
                         <constraint firstItem="D0C-6f-oV1" firstAttribute="leading" secondItem="hXQ-bE-8jK" secondAttribute="leading" id="FJG-FA-YGF"/>
                         <constraint firstItem="tsV-NX-iHM" firstAttribute="centerY" secondItem="D0C-6f-oV1" secondAttribute="centerY" id="PWG-bI-XT3"/>
                         <constraint firstItem="das-Vm-TAV" firstAttribute="top" secondItem="hXQ-bE-8jK" secondAttribute="top" constant="45" id="UN5-qq-24G"/>
+                        <constraint firstItem="das-Vm-TAV" firstAttribute="top" secondItem="tsV-NX-iHM" secondAttribute="bottom" id="cdj-Aa-OZs"/>
                         <constraint firstItem="das-Vm-TAV" firstAttribute="leading" secondItem="D0C-6f-oV1" secondAttribute="trailing" constant="20" id="dUX-sz-LgK"/>
                         <constraint firstAttribute="centerY" secondItem="tsV-NX-iHM" secondAttribute="centerY" id="ddI-z5-lmq"/>
                         <constraint firstItem="das-Vm-TAV" firstAttribute="top" secondItem="tsV-NX-iHM" secondAttribute="bottom" id="gb5-AS-gEn"/>
@@ -135,9 +137,9 @@
                                 <constraint firstAttribute="height" constant="1" id="x6K-oR-GHz"/>
                             </constraints>
                         </view>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入验证码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="o0F-qf-OqG" userLabel="验证码">
-                            <rect key="frame" x="88" y="21" width="462" height="17"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入验证码" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="o0F-qf-OqG" userLabel="验证码">
+                            <rect key="frame" x="88" y="14" width="462" height="31"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MLE-08-GxX" customClass="JxbScaleButton">
@@ -159,6 +161,7 @@
                     </subviews>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="o0F-qf-OqG" secondAttribute="trailing" constant="20" id="0cf-lr-5zS"/>
+                        <constraint firstItem="bhb-dd-Kja" firstAttribute="top" secondItem="o0F-qf-OqG" secondAttribute="bottom" id="1z5-F5-BZ5"/>
                         <constraint firstItem="bhb-dd-Kja" firstAttribute="top" secondItem="MLE-08-GxX" secondAttribute="bottom" constant="5" id="4Xk-MG-nB2"/>
                         <constraint firstItem="o0F-qf-OqG" firstAttribute="centerY" secondItem="fGq-wR-fjd" secondAttribute="centerY" id="7Or-CL-bp6"/>
                         <constraint firstAttribute="trailing" secondItem="bhb-dd-Kja" secondAttribute="trailing" id="9jl-Mn-z4v"/>
@@ -202,10 +205,10 @@
                                 <constraint firstAttribute="height" constant="1" id="Vez-yF-xM0"/>
                             </constraints>
                         </view>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1F7-YC-s6Q" userLabel="设置密码">
-                            <rect key="frame" x="88" y="13.5" width="443" height="31.5"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <textInputTraits key="textInputTraits"/>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入密码" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="1F7-YC-s6Q" userLabel="设置密码">
+                            <rect key="frame" x="88" y="13" width="443" height="31.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YwG-LI-t7O" userLabel="眼睛">
                             <rect key="frame" x="540" y="15" width="30" height="30"/>
@@ -221,6 +224,7 @@
                         </button>
                     </subviews>
                     <constraints>
+                        <constraint firstItem="t3o-HR-Ns0" firstAttribute="top" secondItem="1F7-YC-s6Q" secondAttribute="bottom" id="3Bg-wL-WX7"/>
                         <constraint firstItem="YwG-LI-t7O" firstAttribute="centerY" secondItem="88p-rM-U1C" secondAttribute="centerY" id="CHe-Dl-A8g"/>
                         <constraint firstItem="1F7-YC-s6Q" firstAttribute="top" secondItem="88p-rM-U1C" secondAttribute="top" id="Es5-i5-lsu"/>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="Ftw-YU-fe9"/>
@@ -264,12 +268,12 @@
                                 <constraint firstAttribute="height" constant="1" id="o4k-V9-BIJ"/>
                             </constraints>
                         </view>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入邀请人" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="w3w-og-wTl" userLabel="邀请人">
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入邀请人" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="w3w-og-wTl" userLabel="邀请人">
                             <rect key="frame" x="88" y="10" width="462" height="39"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="39" id="rlj-AC-iTE"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                     </subviews>
